Add maven and springboot